argo/canary/traffic-management/managed-routes/virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo-vsvc
spec:
  gateways:
    - rollouts-demo-gateway
  hosts:
    - "istio-canary-header-routing.com"
  http:
    - name: primary
      route:
        - destination:
            host: rollouts-demo-stable
          weight: 100
        - destination:
            host: rollouts-demo-canary
          weight: 0
